--- a/src/components/MotorhomeSection.astro
+++ b/src/components/MotorhomeSection.astro
@@ -30,7 +30,7 @@ const motorhomeData = {
     { text: "Baños y duchas calientes", highlight: false },
     { text: "Quincho con parrilla", highlight: false },
     { text: "Área exclusiva y tranquila", highlight: false },
-    { text: "Acceso a spa/jacuzzi", highlight: false }
+    { text: "Acceso a tinajas/jacuzzi", highlight: false }
   ],
   price: "$45.000",
   priceNote: "por noche",
